--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.3.0",
+    "webpack-merge": "^5.7.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
@@ -47,7 +48,6 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.7.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
