--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "start": "npm run build && NODE_ENV=production node src/server/server.js ",
+    "start": "NODE_ENV=production node src/server/server.js ",
     "client": "webpack serve --mode development --env development --config webpack.dev.js",
     "server": "nodemon src/server/server.js",
     "dev": "concurrently \"npm run server \" \"npm run client \""
