--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "start": "NODE_ENV=production node src/server/server.js ",
+    "start": "npm run build && NODE_ENV=production node src/server/server.js ",
     "client": "webpack serve --mode development --env development --config webpack.dev.js",
     "server": "nodemon src/server/server.js",
     "dev": "concurrently \"npm run server \" \"npm run client \""
@@ -23,9 +23,6 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.3.0",
-    "webpack-merge": "^5.7.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
@@ -48,6 +45,9 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.7.3"
   }
 }
